# Callikino

./: .gitignore  LICENSE  README.md  agent_executor.py  context.txt  core.py  how_to_for_llms.txt  my_doubts.txt  pyproject.toml  schema.json  test_compiler.py  test_phase3.py  test_phase4.py  tool_schemas.py
callikino/: __init__.py  agent_executor.py  cli.py  core.py  mcp_server.py
callikino/pipelines/: __init__.py  jumpcut.py
pipelines/: __init__.py  jumpcut.py
tests/: test_phase3.py  test_setup.py  test_tools.py
